--- a/index.html
+++ b/index.html
@@ -10,9 +10,31 @@
         <div style="background-color: red;">Mis recetas</div>
         <div style="background-color: blue;">Inicio | Recetas | Contactar</div>
         <div style="background-color: green;">
-            <div style="background-color: pink;">Recetas</div>
-            <div style="background-color: yellow">Menú del día</div>
+            <div style="background-color: pink;">
+                <div>
+                    <div>Receta 1</div>
+                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore maiores blanditiis aliquam. Eos facere praesentium ea sunt totam quae veritatis deserunt natus nesciunt iste, quam iusto temporibus reprehenderit eveniet. At!</div>
+                </div>
+                <div style="background-color: darkblue;">
+                    <div>Receta 2</div>
+                    <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, fuga! Dolores sunt voluptatibus ea repellat cum iusto temporibus commodi laboriosam sit, odio similique aperiam consequuntur hic a odit quis aspernatur?</div>
+                </div>
+                <div>
+                    <div>Receta 3</div>
+                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis soluta distinctio eligendi nisi maiores impedit eos magnam, harum perspiciatis cupiditate veritatis sed eius esse laudantium labore cumque asperiores deleniti! Harum.</div>
+                </div>
+            </div>
+            <div style="background-color: #ffff00">
+                <div>Menu del día</div>
+                <div>
+                    <div>receta 6</div>
+                    <div>receta 7</div>
+                    <div>receta 9</div>
+                </div>                
+            </div>            
         </div>
+        <div style="background-color:coral">Footer - 2021</div>
+
         
     </body>
 </html>
