corrección commit anterior

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div>Menu del día</div>
                 <div>
                     <div>receta 6</div>
-                    <div>receta 7</div>
+                    <div>Receta 7</div>
                     <div>receta 9</div>
                 </div>                
             </div>            
