Estructura básica con etiquetas semánticas

--- a/index.html
+++ b/index.html
@@ -7,33 +7,35 @@
         <meta name="keywords" content="Recetas, cocina, gastronomía">    
     </head>
     <body>
-        <div style="background-color: red;">Mis recetas</div>
-        <div style="background-color: blue;">Inicio | Recetas | Contactar</div>
-        <div style="background-color: green;">
-            <div style="background-color: pink;">
-                <div>
-                    <div>Receta 1</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore maiores blanditiis aliquam. Eos facere praesentium ea sunt totam quae veritatis deserunt natus nesciunt iste, quam iusto temporibus reprehenderit eveniet. At!</div>
-                </div>
-                <div style="background-color: darkblue;">
-                    <div>Receta 2</div>
-                    <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, fuga! Dolores sunt voluptatibus ea repellat cum iusto temporibus commodi laboriosam sit, odio similique aperiam consequuntur hic a odit quis aspernatur?</div>
-                </div>
-                <div>
-                    <div>Receta 3</div>
-                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis soluta distinctio eligendi nisi maiores impedit eos magnam, harum perspiciatis cupiditate veritatis sed eius esse laudantium labore cumque asperiores deleniti! Harum.</div>
-                </div>
-            </div>
-            <div style="background-color: #ffff00">
-                <div>Menu del día</div>
-                <div>
-                    <div>receta 6</div>
-                    <div>Receta 7</div>
-                    <div>receta 9</div>
-                </div>                
-            </div>            
-        </div>
-        <div style="background-color:coral">Footer - 2021</div>
+        <header style="background-color: red;">
+            Mis recetas            
+        </header>
+        <nav style="background-color: orange;">Inicio | Recetas | Contactar</nav>
+        <main style="background-color: green;">
+            <section style="background-color: blue;">
+                <article style="background-color: blueviolet;">                    
+                    <header style="background-color: chartreuse;">Receta 1</header>                              
+                    <p style="background-color: chartreuse;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore maiores blanditiis aliquam. Eos facere praesentium ea sunt totam quae veritatis deserunt natus nesciunt iste, quam iusto temporibus reprehenderit eveniet. At!</p>
+                </article>
+                <article style="background-color: blueviolet;">
+                    <header style="background-color: chartreuse;">Receta 2</header>
+                    <p style="background-color: chartreuse;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, fuga! Dolores sunt voluptatibus ea repellat cum iusto temporibus commodi laboriosam sit, odio similique aperiam consequuntur hic a odit quis aspernatur?</p>
+                </article>
+                <article style="background-color: blueviolet;">
+                    <header style="background-color: chartreuse;">Receta 3</header>
+                    <p style="background-color: chartreuse;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis soluta distinctio eligendi nisi maiores impedit eos magnam, harum perspiciatis cupiditate veritatis sed eius esse laudantium labore cumque asperiores deleniti! Harum.</p>
+                </article>
+            </section>
+            <aside style="background-color:chocolate">
+                <header>Menu del día</header>
+                <ul>
+                    <li>receta 6</li>
+                    <li>receta 7</li>
+                    <li>receta 9</li>
+                </ul>                
+            </aside>            
+        </main>
+        <footer style="background-color:coral">Footer - 2021</footer>
 
         
     </body>
