Creamos la página test.html con dinstintos elementos HTML. Subimos imagen de carbonara

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="utf-8">
         <title>Mis recetas</title>
         <meta name="description" content="Página web sobre mis recetas">
-        <meta name="keywords" content="Recetas, cocina, gastronomía">    
+        <meta name="keywords" content="Recetas, cocina, gastronomía">          
     </head>
     <body>
-        <header style="background-color: red;">
+        <header>
             Mis recetas            
         </header>
-        <nav style="background-color: orange;">Inicio | Recetas | Contactar</nav>
+        <nav>Inicio | Recetas | Contactar</nav>
         <main style="background-color: green;">
             <section style="background-color: blue;">
                 <article style="background-color: blueviolet;">                    
