Nuevas etiquetas HTML: textarea, label, button

--- a/test.html
+++ b/test.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
 </head>
+
 <body>
+
     <h1>Texto</h1>
     <h1 id="h1">Titular h1</h1>
     <h2>Titular h2</h2>
@@ -12,27 +15,27 @@
     <h4>Titular h4</h4>
     <h5>Titular h5</h5>
     <h6>Titular h6</h6>
-    <p>Esto es un parrafo 1</p>    
-    <p>Esto es un parrafo 2</p>    
+    <p>Esto es un parrafo 1</p>
+    <p>Esto es un parrafo 2</p>
     <p>Esto es un parrafo 3</p>
     <span>Esto es un span 1</span>
-    <span>Esto es un span 2</span> 
+    <span>Esto es un span 2</span>
     <p>Lorem <strong>ipsum</strong> dolor <em>sit</em> amet consectetur adipisicing elit. Est rerum ab fugiat nisi, similique cum distinctio iusto et quis voluptate itaque ipsa reiciendis ad blanditiis voluptas vitae ratione impedit perferendis!</p>
     <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium maxime provident tempora quae. Corporis esse nobis maxime placeat dolores ipsam id, a iure, harum nihil expedita qui distinctio sunt autem.</em></p>
 
     <h1>Enlaces</h1>
-   
+
     <a href="index.html">esto es un enlace</a>
     <a href="http://www.google.com" target="_blank">link a Google</a>
     <a href="#h1">Link a h1</a>
     <a href="#mi-h3">Link a h3</a>
     <a href="mailto:lalala@gmail.com">Enviar email a lalala@gmail.com</a>
 
-    <hr> 
+    <hr>
 
     <h1>Imágenes</h1>
     <img alt="Espaguettis carbonara" width="200" height="100" src="images/espaguetis-carbonara1.jpg">
-    
+
     <br>
 
     <h1>Listas</h1>
@@ -53,7 +56,7 @@
 
     <h1>Tablas</h1>
 
-    <table>        
+    <table>
         <tr>
             <th>nombre</th>
             <th>nota</th>
@@ -73,10 +76,10 @@
             <td>Bruno Hernan</td>
             <td>7</td>
             <td>4</td>
-        </tr>   
+        </tr>
     </table>
 
-    <hr>    
+    <hr>
 
     <h1>Formularios</h1>
 
@@ -84,17 +87,29 @@
         <input type="text" placeholder="Introduce tu nombre">
         <hr>
         <select>
-            <option>Madrid</option>  
-            <option>Valencia</option>                      
+            <option>Madrid</option>
+            <option>Valencia</option>
+            <option selected>Murcia</option>
+            <option>Brasil</option>
         </select>
         <br>
         <input type="submit" value="Mandar">
+        <br>
+        <br>
+        <textarea placeholder="introduce tu mensaje">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime dolores porro fugiat quidem quos quisquam laborum sit repellendus, incidunt ea unde corporis nulla minima deserunt ut autem dolorum aliquid consequuntur.s</textarea>
+        <br>
+        <button>Mandar</button>
     </form>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>   
-    
+    <hr>
+    <form>
+        <label>Introduce tu nombre: <input type="text"></label>
+        <br><br>
+        <label>Introduce tu contraseña: <input type="password"></label>
+        <br><br>
+        <button>Enviar datos</button>
+    </form>
+   
+
 </body>
+
 </html>
