--- a/index.html
+++ b/index.html
@@ -1,42 +1,54 @@
 <!DOCTYPE html>
-<html lang="es">
-    <head>
-        <meta charset="utf-8">
-        <title>Mis recetas</title>
-        <meta name="description" content="Página web sobre mis recetas">
-        <meta name="keywords" content="Recetas, cocina, gastronomía">          
-    </head>
-    <body>
-        <header>
-            Mis recetas            
-        </header>
-        <nav>Inicio | Recetas | Contactar</nav>
-        <main style="background-color: green;">
-            <section style="background-color: blue;">
-                <article style="background-color: blueviolet;">                    
-                    <header style="background-color: chartreuse;">Receta 1</header>                              
-                    <p style="background-color: chartreuse;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore maiores blanditiis aliquam. Eos facere praesentium ea sunt totam quae veritatis deserunt natus nesciunt iste, quam iusto temporibus reprehenderit eveniet. At!</p>
-                </article>
-                <article style="background-color: blueviolet;">
-                    <header style="background-color: chartreuse;">Receta 2</header>
-                    <p style="background-color: chartreuse;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, fuga! Dolores sunt voluptatibus ea repellat cum iusto temporibus commodi laboriosam sit, odio similique aperiam consequuntur hic a odit quis aspernatur?</p>
-                </article>
-                <article style="background-color: blueviolet;">
-                    <header style="background-color: chartreuse;">Receta 3</header>
-                    <p style="background-color: chartreuse;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis soluta distinctio eligendi nisi maiores impedit eos magnam, harum perspiciatis cupiditate veritatis sed eius esse laudantium labore cumque asperiores deleniti! Harum.</p>
-                </article>
-            </section>
-            <aside style="background-color:chocolate">
-                <header>Menu del día</header>
-                <ul>
-                    <li>receta 6</li>
-                    <li>receta 7</li>
-                    <li>receta 9</li>
-                </ul>                
-            </aside>            
-        </main>
-        <footer style="background-color:coral">Footer - 2021</footer>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Mis recetas</title>
+</head>
+<body>
+    <header style="text-align:center;border: 1px solid #aaa;padding:10px;margin-bottom: 10px;">
+        <a href="index.html">Mis recetas</a>
+    </header>
 
+    <nav style="text-align:center;border: 1px solid #aaa;background-color:yellow;padding: 10px; margin-bottom: 10px;">
+        Inicio
+        |
+        <a href="recetas.html">Recetas</a>
+        |
+        <a href="contactar.html">Contactar</a>
+    </nav>
+
+    <main style="display:flex;border: 1px solid blue;padding: 60px; margin-bottom: 20px;">
+        <section style="display:flex;width:75%;padding:5px;justify-content:space-around;row;flex-wrap:wrap;border:2px solid black">
+            <div style="border:1px solid green;width:40%;padding:10px;margin-bottom:5px;">
+                <h2><a href="">receta 1</a></h2>
+                <a href=""><img width="100" height="70" src="_resources/espaguetis-de-calabacin.jpg"></a>                
+            </div>
+            <div style="border:1px solid green;width:40%;padding:10px;margin-bottom:5px;">
+                <h2><a href="">Receta 2</a></h2>
+                <a href=""><img width="100" height="70" src="_resources/lubina-con-hummus-de-guisantes.jpg"></a>
+            </div>
+            <div style="border:1px solid green;width:40%;padding:10px;margin-bottom:5px;">
+                <h2><a href="">Receta 3</a></h2>
+                <a href=""><img width="100" height="70" src="_resources/tiramisu-express.jpg"></a>
+            </div>
+            <div style="border:1px solid green;width:40%;padding:10px;margin-bottom:5px;">
+                <h2><a href="">Receta 4</a></h2>
+                <a href=""><img width="100" height="70" src="_resources/vichyssoise-de-esparragos-blancos.jpg"></a>
+            </div>
+        </section>
+        <aside style="width:20%;margin-left:auto;border:2px solid black">
+            <h2>Menú del día</h2>
+            <ul>
+                <li><a href="">Receta 6</a></li>
+                <li><a href="">Receta 7</a></li>
+                <li><a href="">Receta 9</a></li>
+            </ul>
         
-    </body>
+        </aside>
+    </main>
+
+    <footer style="text-align:center;border: 1px solid black;padding: 10px; margin-bottom: 10px;">Footer - 2021</footer>
+
+    
+</body>
 </html>
