link en paginación

--- a/recetas.html
+++ b/recetas.html
@@ -67,7 +67,7 @@
 
         </section>
 
-        <nav>1 | 2 | 3 ... 12 </nav>
+        <nav><a href="">1</a> | 2 | 3 ... 12 </nav>
       
     </main>
 
