--- a/testcss_cascada.html
+++ b/testcss_cascada.html
@@ -16,7 +16,9 @@
     </div>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores provident ea eos maiores expedita, suscipit distinctio adipisci qui non, ratione ut reiciendis cumque molestias rerum, ullam fugit laboriosam ab repellendus?</p>
-    
+  
+    <a class="rojo" href="">link</a>
+
 </body>
 
 </html>
